# cpp_utils

./: .gitignore  .gitmodules  Array.hpp  Bitwise.hpp  CMakeLists.txt  ConditionalEvent.hpp  Event.hpp  ExceptionCatch.hpp  File.cpp  File.hpp  Lifehack.hpp  Log.cpp  Log.hpp  NonCopyable.hpp  README.md  Singleton.hpp  Singletone.hpp  String.cpp  String.hpp  System.cpp  System.hpp  Time.hpp  build.py  conan.txt
source/cpp_utils/: ArrayView.hpp  Bitwise.hpp  CMakeLists.txt  ConditionalEvent.hpp  DataPacket.hpp  Event.hpp  Header.hpp  Log.cpp  NumericResult.hpp  Platform.hpp  Result.hpp  Singleton.hpp  Target.hpp  Utils.hpp  XYZPack.hpp
source/cpp_utils/arm/: Arm.cpp  Arm.hpp  SerialInterface.cpp  SerialInterface.hpp  Servo.cpp  Servo.hpp
source/cpp_utils/bluetooth/: BLCentralManager.cpp  BLCentralManager.hpp  BLPeripheral.cpp  BLPeripheral.hpp  Bluetooth.cpp  Bluetooth.hpp
source/cpp_utils/data/: ArrayView.hpp  CircularBuffer.hpp  DataUtils.hpp  Result.hpp
source/cpp_utils/debug/: AllocTest.hpp  Debug.cpp  Debug.hpp
source/cpp_utils/dsp/: ClippingConversion.cpp  ClippingConversion.hpp  Range.hpp  RangeConversion.cpp  RangeConversion.hpp  SignalGenerator.hpp
source/cpp_utils/filesystem/: File.cpp  File.hpp  NewFile.cpp  NewFile.hpp  NewPath.cpp  NewPath.hpp  Path.cpp  Path.hpp  PathInfo.cpp  PathInfo.hpp
source/cpp_utils/iOS/: CallObj.hpp  CallObj.mm  CentralManagerBridge.h  CentralManagerBridge.mm  OBJBridge.h  OBJBridge.m  OBJBridge.mm  PeripheralManagerBridge.h  PeripheralManagerBridge.mm
source/cpp_utils/log/: Log.cpp  Log.hpp  LogData.hpp  LogUtils.hpp  OldLog.hpp
source/cpp_utils/mapping/: JSONMappable.hpp  Mappable.hpp  Property.hpp  SQLiteMappable.hpp  TestJsonModels.hpp  Value.cpp  Value.hpp
source/cpp_utils/meta/: DetailedTypeInfo.hpp  IterateTuple.hpp  MetaHelpers.cpp  MetaHelpers.hpp  TypeInfo.hpp
source/cpp_utils/misc/: ForceConvert.hpp  ForceInitializable.hpp  LineID.hpp  NonCopyable.hpp  NumberBuffer.hpp  Property.hpp  RangeConversion.cpp  RangeConversion.hpp  STDExperimental.hpp  json.hpp  magic_enum.hpp  sha3.cpp  sha3.h
source/cpp_utils/new_mapping/: ClassInfo.hpp  NewMapper.hpp
source/cpp_utils/stl/: Array.hpp  ArrayUtils.hpp  CPP17Bridge.hpp  Dictionary.hpp  ExceptionCatch.hpp  String.hpp  StringUtils.cpp  StringUtils.hpp
(+38 files in other folders)
